Sun May 09 21:19:43 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/Makefile.am,tests/api_anydb.cc,tests/api_opvalue.cc: Move
	  the tests for OP_VALUE_* query operators from api_anydb.cc to
	  api_opvalue.cc.  Remove copyright statements earlier than 2007,
	  since OP_VALUE_* wasn't added until 2007.

Sun May 09 21:04:06 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/valuegepostlist.cc: Initialise valuelist in check() if
	  necessary.
	* tests/api_anydb.cc: Add regression test for this.

Thu May 06 15:03:43 GMT 2010  Richard Boulton <richard@tartarus.org>

	* tests/api_replicate.cc: Add some extra debugging, to help
	  identify the problem with ticket #472.

Thu May 06 13:38:25 GMT 2010  Olly Betts <olly@survex.com>

	* common/safeuuid.h,configure.ac,INSTALL: Make use of built-in UUID API
	  on FreeBSD and NetBSD.  (ticket#470)

Thu May 06 13:10:30 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS,Makefile.am,cmake/,configure.ac: Install files to make Xapian
	  easier to use with cmake.  Thanks to Sune Vuorela for providing the
	  desired output.

Thu May 06 11:42:16 GMT 2010  Olly Betts <olly@survex.com>

	* tests/harness/fdtracker.cc: Don't pass NULL to closedir().

Thu May 06 11:19:41 GMT 2010  Olly Betts <olly@survex.com

	* tests/api_anydb.cc: Test UUID is 36 characters long.

Thu May 06 10:41:21 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuegepostlist.cc: Use "str.h" and str().

Thu May 06 10:01:48 GMT 2010  Olly Betts <olly@survex.com>

	* matcher/valuegepostlist.cc: Remove unused headers.

Thu May 06 09:55:27 GMT 2010  Richard Boulton <richard@tartarus.org>

	* matcher/valuegepostlist.cc,matcher/valuerangepostlist.cc:
	  Keep return value from valuelist->get_value() as a const string &
	  rather than a string - could be more efficient on some compilers,
	  though testing with gcc 4.1 revealed no difference.

Thu May 06 09:49:12 GMT 2010  Richard Boulton <richard@tartarus.org>
