@@ -168,3 +168,10 @@ DEFINE_TESTCASE(valuele1, backend) {
     }
     return true;
 }
+
+// Check that Query(OP_VALUE_GE, 0, "") -> Query::MatchAll.
+DEFINE_TESTCASE(valuege3, !backend) {
+    Xapian::Query query(Xapian::Query::OP_VALUE_GE, 0, "");
+    TEST_STRINGS_EQUAL(query.get_description(), Xapian::Query::MatchAll.get_description());
+    return true;
+}
