@@ -1,3 +1,9 @@
+Sun May 09 21:22:50 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* tests/api_nodb.cc,tests/api_opvalue.cc: Move test "opvaluege1"
+	  from api_nodb.cc to api_opvalue.cc, and rename to valuege3 for
+	  consistency with other tests of OP_VALUE_GE.
+
 Sun May 09 21:19:43 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* tests/Makefile.am,tests/api_anydb.cc,tests/api_opvalue.cc: Move
